src/objects/BMCServiceDesk__SYSUsersTimezones__c.object
<CustomObject>
    <description>This object allows you to store data for the time zones of users.</description>
    <fields>
        <fullName>BMCServiceDesk__FKUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKStaff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SYSUsersTimezones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Offset__c</fullName>
        <label>Offset</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Timezone__c</fullName>
        <description>This holds the Timezone value sourced from the User object</description>
        <label>Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__cityName__c</fullName>
        <description>City name.</description>
        <label>City Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Users Timezones</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Locale</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYSUsersTimezones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>